[metadata]
name = plover_czech
version = 0.0.1
description = Czech language system for Plover
long_description = file: README.md
author = Ashlynn Anderson
author_email = pea@pea.sh
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/transitracer/plover_czech
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev0
py_modules =
    plover_czech

[options.entry_points]
plover.system =
    Czech Stenotype = plover_czech